fix: word wrap title, order_desc (WAL-549)

--- a/src/scss/core/_modal.scss
+++ b/src/scss/core/_modal.scss
@@ -157,6 +157,7 @@ html {
   height: 100%;
   padding: 0 px-to-rem(20px) px-to-rem(20px);
   line-height: 1.5;
+  word-wrap: break-word;
 }
 
 // Footer (for actions)
